fixing alignment on emai input box

--- a/styles.css
+++ b/styles.css
@@ -258,12 +258,10 @@ header {
 .header__description {
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin: 56px 0;
 }
 
 .header__customers {
-  padding: 20px;
   z-index: 50;
 }
 
@@ -839,11 +837,12 @@ Specificity: (0,3,0) {
 .testimonial__button {
     border-radius: 50%;
     border-style: none;
-    background-color: rgb(203, 202, 206);
-    padding: 0.75rem 0.75rem;
+    background-color: #edf2f7;
+    padding: 16px;
     font-weight: 700;
-    color: rgb(247 250 252);
+    color: rgb(100, 21, 255);
     transition: all 300ms ease;
+    margin: 0 12px;
 }
 
 /*Start*/
@@ -968,6 +967,7 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
 .footer__logo {
